code cleanup: add missing generics, remove redundant code... etc.